fixes header alignment

--- a/css/generalStyles.css
+++ b/css/generalStyles.css
@@ -13,7 +13,7 @@ main {
 
 header {
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
 
     width: 100%;
